author filtering + timeline filtering

--- a/app/scripts/templates/timeline.html
+++ b/app/scripts/templates/timeline.html
@@ -8,7 +8,7 @@
             </div>
 
             <div class="l-split__left">
-                <div class="ap-section__title">{{nTweets}} tweets in {{lowerTimeBound}} - {{upperTimeBound}}</div>
+                <div class="ap-section__title">{{nTweets}} tweets in {{lowerTimeBound | amDateFormat:'MMM Do h:mm'}} - {{upperTimeBound | amDateFormat:'MMM Do h:mm'}}</div>
             </div>
         </div>
     </div>
