--- a/app/sass/modules/_menu-popup.scss
+++ b/app/sass/modules/_menu-popup.scss
@@ -1,5 +1,6 @@
 .menu-popup {
   position: absolute;
+  z-index: 3;
   right: 0; top: 0;
 
   &__indicator {
@@ -7,11 +8,27 @@
     height: $global-baseline * 2;
     margin: $global-baseline/6 0;
 
-    font-size: 10px;
     line-height: $global-baseline * 2;
 
     text-align: center;
-    color: $color-dc-tertiary;
     cursor: pointer;
+  }
+
+  &__counter {
+    height: 16px;
+    min-width: 16px;
+    padding: 0 3px;
+    margin: 6px;
+
+    line-height: 16px;
+    font-size: 10px;
+    font-weight: 600;
+
+    cursor: pointer;
+    text-align: center;
+    color: white;
+
+    background: $color-dc-secondary;
+    border-radius: 3px;
   }
 }
