--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -11,8 +11,37 @@
         </div>
     </div>
 
+
     <div class="grid grid--full">
         <div class="grid__item two-thirds">
+            <div class="l-block-small">
+                <div class="ap-section">
+                    <div class="l-block-small">
+                        <div class="ap-section__header">
+                            <div class="ap-section__title">Personalization</div>
+                        </div>
+                    </div>
+
+                    <div class="l-list-inline">
+                        <div class="l-list-inline__item">
+                            <label>
+                                <input type="checkbox"
+                                       ng-click="setFilters({highlightUnknown: !filters.highlightUnknown})"
+                                       ng-checked="filters.highlightUnknown"/> Highlight commands I do not know
+                            </label>
+                        </div>
+
+                        <div class="l-list-inline__item">
+                            <label>
+                                <input type="checkbox"
+                                       ng-click="setFilters({highlightRelevant: !filters.highlightRelevant})"
+                                       ng-checked="filters.highlightRelevant"/> Highlight commands relevant to my work
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <timeline></timeline>
         </div><!--
         --><div class="grid__item one-third">
