--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -18,7 +18,7 @@
                 <div class="ap-section">
                     <div class="l-block-small">
                         <div class="ap-section__header">
-                            <div class="ap-section__title">Personalization</div>
+                            <div class="ap-section__title">Personalization (matching commands' indicators are highlighted in red)</div>
                         </div>
                     </div>
 
