--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -14,6 +14,8 @@
         <button class="amd-item__name">{{item.label}}</button>
 
         <span class="amd-item__counter"
+              ng-class="{'am-item__counter--mixed': (filters.highlightUnknown || filters.highlightRelevant) && item.highlightType == 'mixed',
+                         'am-item__counter--highlighted': (filters.highlightUnknown || filters.highlightRelevant) && item.highlightType == 'highlighted'}"
               ng-show="filters.active && item.nTweets && item.children.length">{{item.nTweets}}</span>
     </div>
 
@@ -45,6 +47,8 @@
                             <span class="l-list-inline__item is-middle-aligned"
                                   ng-show="filters.active">
                                 <span class="am-item__counter"
+                                      ng-class="{'am-item__counter--mixed': (filters.highlightUnknown || filters.highlightRelevant) && rootItem.highlightType == 'mixed',
+                                                 'am-item__counter--highlighted': (filters.highlightUnknown || filters.highlightRelevant) && rootItem.highlightType == 'highlighted'}"
                                       ng-show="rootItem.nTweets">{{rootItem.nTweets}}</span>
                             </span>
                         </span>
