--- a/app/scripts/templates/menuPopup.html
+++ b/app/scripts/templates/menuPopup.html
@@ -1,6 +1,8 @@
 <div class="menu-popup"
      ng-show="tweets.length">
     <div class="menu-popup__counter"
+         ng-class="{'menu-popup__counter--mixed': (filters.highlightUnknown || filters.highlightRelevant) && context.highlightType == 'mixed',
+                    'menu-popup__counter--highlighted': (filters.highlightUnknown || filters.highlightRelevant) && context.highlightType == 'highlighted'}"
          ng-show="filters.active && context.nTweets"
          ng-mouseover="show()"
          ng-mouseleave="hide()">{{context.nTweets}}</div>
