refactoring of code structure

--- a/app/sass/modules/_tweet.scss
+++ b/app/sass/modules/_tweet.scss
@@ -13,6 +13,7 @@
     width: $global-baseline * 2;
     height: $global-baseline * 2;
 
+    border: 1px solid $color-border;
     border-radius: 50%;
     background-size: cover;
     background-position: center center;
