--- a/app/scripts/templates/tweetsWidget.html
+++ b/app/scripts/templates/tweetsWidget.html
@@ -6,7 +6,7 @@
         </div>
 
         <div class="l-list-inline__item is-middle-aligned is-ltr"
-             ng-repeat="n in data.notifications">
+             ng-repeat="n in latest">
             <widget-notification notification="n"></widget-notification>
         </div>
     </div>
