--- a/app/sass/modules/_menu-popup.scss
+++ b/app/sass/modules/_menu-popup.scss
@@ -1,14 +1,15 @@
 .menu-popup {
   position: absolute;
   z-index: 3;
-  right: 0; top: 0;
+  right: 18px; top: 6px;
 
   &__indicator {
-    width:  $global-baseline * 2;
-    height: $global-baseline * 2;
-    margin: $global-baseline/6 0;
+    height: 16px;
+    min-width: 16px;
+    padding: 0 3px;
 
-    line-height: $global-baseline * 2;
+    font-size: 10px;
+    line-height: 16px;
 
     text-align: center;
     cursor: pointer;
@@ -18,15 +19,14 @@
     height: 16px;
     min-width: 16px;
     padding: 0 3px;
-    margin: 6px;
 
-    line-height: 16px;
     font-size: 10px;
+    line-height: 16px;
     font-weight: 600;
 
-    cursor: pointer;
-    text-align: center;
     color: white;
+    text-align: center;
+    cursor: pointer;
 
     background: $color-dc-secondary;
     border-radius: 3px;
@@ -35,7 +35,6 @@
       background: $color-dc-tertiary;
     }
     &__counter--mixed {
-      background-color: none;
       @include background-image(linear-gradient(left top,
               $color-dc-tertiary 0%,
               $color-dc-tertiary 50%,
@@ -43,3 +42,10 @@
               $color-dc-secondary 100%));
     }
 }
+  .menu-popup--leaf {
+    right: 6px;
+  }
+  .menu-popup--root {
+    right: 0;
+    top: 2px;
+  }
