--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -1,9 +1,14 @@
 <script type="text/ng-template" id="menuDropdown">
-    <menu-notification  context="item"
-                        ng-show="item.isHighlighted && !item.children.length"></menu-notification>
+    <div class="popup"
+         ng-show="item.isHighlighted && !item.children.length">
+        <div class="p-body">
+            <div class="p-body__item">
+                <tweet tweet="notification.tweet"></tweet>
+            </div>
+        </div>
+    </div>
 
-    <menu-popup context="item"
-                ng-show="!item.children.length"></menu-popup>
+    <menu-popup context="item"></menu-popup>
 
     <div class="amd-item"
          ng-class="{'amd-item--active': item.isOpen,
@@ -12,11 +17,6 @@
          ng-mouseover="open(item.id)">
 
         <button class="amd-item__name">{{item.label}}</button>
-
-        <span class="amd-item__counter"
-              ng-class="{'am-item__counter--mixed': (filters.highlightUnknown || filters.highlightRelevant) && item.highlightType == 'mixed',
-                         'am-item__counter--highlighted': (filters.highlightUnknown || filters.highlightRelevant) && item.highlightType == 'highlighted'}"
-              ng-show="filters.active && item.nTweets && item.children.length">{{item.nTweets}}</span>
     </div>
 
     <div ng-show="item.children.length">
@@ -34,6 +34,8 @@
         <li class="l-list-inline__item"
             ng-repeat="rootItem in menu">
             <div class="app-menu__slot">
+                <menu-popup context="rootItem"></menu-popup>
+
                 <div class="am-item"
                      ng-class="{'am-item--active': rootItem.isOpen,
                                 'am-item--highlighted': rootItem.isHighlighted}"
@@ -46,10 +48,6 @@
 
                             <span class="l-list-inline__item is-middle-aligned"
                                   ng-show="filters.active">
-                                <span class="am-item__counter"
-                                      ng-class="{'am-item__counter--mixed': (filters.highlightUnknown || filters.highlightRelevant) && rootItem.highlightType == 'mixed',
-                                                 'am-item__counter--highlighted': (filters.highlightUnknown || filters.highlightRelevant) && rootItem.highlightType == 'highlighted'}"
-                                      ng-show="rootItem.nTweets">{{rootItem.nTweets}}</span>
                             </span>
                         </span>
                     </button>
