--- a/app/scripts/templates/tweet.html
+++ b/app/scripts/templates/tweet.html
@@ -6,7 +6,16 @@
             </div>
 
             <div class="l-split__left">
-                <div class="tweet__author-name">@{{tweet.author.name}}</div>
+                <div class="l-list-inline l-list-inline--x-small">
+                    <div class="l-list-inline__item">
+                        <div class="tweet__author-avatar"
+                             style="background-image: url({{tweet.author.avatar}});"></div>
+                    </div>
+
+                    <div class="l-list-inline__item">
+                        <div class="tweet__author-name">@{{tweet.author.name}}</div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
