--- a/app/scripts/templates/activityPanel.html
+++ b/app/scripts/templates/activityPanel.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
 
-            <!--<timeline></timeline>-->
+            <timeline></timeline>
         </div><!--
         --><div class="grid__item one-third">
             <authors-filter></authors-filter>
