--- a/app/scripts/templates/timeline.html
+++ b/app/scripts/templates/timeline.html
@@ -3,8 +3,8 @@
         <div class="l-split">
             <div class="l-split__right">
                 <button class="link"
-                        ng-show="filterSet"
-                        ng-click="unsetTimeFilter()">clear filter</button>
+                        ng-show="filters.time"
+                        ng-click="resetTimeFilter()">clear filter</button>
             </div>
 
             <div class="l-split__left">
