added notification on hover for timeline tweets

--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -80,6 +80,8 @@
   stroke: darken($color-border, 20%);
   stroke-width: 0;
 
+  cursor: pointer;
+
   opacity: 0.2;
 }
   .timeline-tweet--matching {
