--- a/app/sass/_shame.scss
+++ b/app/sass/_shame.scss
@@ -89,6 +89,6 @@
     opacity: 1;
   }
   .timeline-tweet--following {
-    stroke: $color-dc-secondary;
+    stroke: $color-dc-quaternary;
     stroke-width: 3px;
   }
