--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -127,7 +127,8 @@
         'modules/tweet',
         'modules/popup',
         'modules/app-panel',
-        'modules/author';
+        'modules/author',
+        'modules/buttons';
 
 @import 'states',
         'dev-grid',
