--- a/app/sass/configs/_variables.scss
+++ b/app/sass/configs/_variables.scss
@@ -26,6 +26,7 @@
   $color-dc-primary: #faff00;
   $color-dc-secondary: #4583ff;
   $color-dc-tertiary: #ff4d39;
+  $color-dc-quaternary: #22c145;
 
 // layout
   $max-width: 1200px;
