--- a/app/scripts/templates/author.html
+++ b/app/scripts/templates/author.html
@@ -2,40 +2,33 @@
      ng-show="author.tweetsCount > 0"
      ng-class="{'author--selected': author.name == filters.author.name}"
      ng-click="setAuthorFilter()">
-    <div class="l-media">
-        <div class="l-media__figure">
-            <div class="author__avatar"
-                 style="background-image: url({{author.avatar}});"></div>
-        </div>
+    <div class="l-justified">
+        <div class="l-justified__item is-middle-aligned">
+            <div class="l-list-inline l-list-inline--collapsed">
+                <div class="l-list-inline__item is-middle-aligned">
+                    <div class="author__avatar"
+                         style="background-image: url({{author.avatar}});"></div>
+                </div>
 
-        <div class="l-media__body">
-            <div class="l-split">
-                <div class="l-split__right">
+                <div class="l-list-inline__item is-middle-aligned">
+                    <div class="author__name">@{{author.name}}</div>
                     <div class="author__tweets">{{author.tweetsCount}} tweets</div>
                 </div>
+            </div>
+        </div>
 
-                <div class="l-split__left">
-                    <div class="author__name">@{{author.name}}</div>
-                </div>
+        <div class="l-justified__item is-middle-aligned">
+            <div class="author__follow-action">
+                <button class="button-empty button-empty--success"
+                        ng-hide="author.isFollowing"
+                        ng-click="toggleFollow($event)">follow</button>
+                <button class="button-empty button-empty--danger"
+                        ng-show="author.isFollowing"
+                        ng-click="toggleFollow($event)">unfollow</button>
             </div>
 
-            <div class="author__follow">
-                <div class="l-list-inline l-list-inline--x-small"
-                     ng-show="author.isFollowing">
-                    <div class="l-list-inline__item">
-                        You follow @{{author.name}}
-                    </div>
-
-                    <div class="l-list-inline__item">
-                        <button class="link link--danger"
-                                ng-click="toggleFollow($event)">unfollow</button>
-                    </div>
-                </div>
-
-                <button class="link"
-                        ng-click="toggleFollow($event)"
-                        ng-hide="author.isFollowing">follow @{{author.name}}</button>
-            </div>
+            <div class="author__follow-status"
+                 ng-show="author.isFollowing">following</div>
         </div>
     </div>
 </div>
