some css changes

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -116,7 +116,8 @@
         'layouts/tricol',
         'layouts/media',
         'layouts/block',
-        'layouts/offscreen';
+        'layouts/offscreen',
+        'layouts/hoverchange';
 
 @import 'modules/topbar',
         'modules/toolbar',
