--- a/app/sass/modules/_toolbar.scss
+++ b/app/sass/modules/_toolbar.scss
@@ -1,11 +1,18 @@
 .toolbar {
-  width: 100%;
-  height: $global-baseline * 3;
+  padding: 3px;
 
-  background: lighten($color-bg-secondary, 5%);
-  border-bottom: 1px solid $color-border;
+  background: $color-bg-secondary;
+  border: 1px solid $color-border;
 
-  &__mock {
+  &__slot {
+    // ...
+  }
 
+  &__divider {
+    width: 100%;
+    height: 1px;
+    margin: 3px 0;
+
+    background: $color-border-secondary;
   }
 }
