--- a/app/sass/modules/_toolbar.scss
+++ b/app/sass/modules/_toolbar.scss
@@ -1,4 +1,5 @@
 .toolbar {
+  position: absolute;
   padding: 3px;
 
   background: $color-bg-secondary;
@@ -16,3 +17,7 @@
     background: $color-border-secondary;
   }
 }
+  .toolbar--tools {
+    top: $global-baseline * 4;
+    left: $global-baseline/2;
+  }
