panels + portion of Ps menu

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -130,7 +130,8 @@
         'modules/author',
         'modules/buttons',
         'modules/toolbar',
-        'modules/toolbar-item';
+        'modules/toolbar-item',
+        'modules/panelbar-item';
 
 @import 'states',
         'dev-grid',
