--- a/app/scripts/templates/toolbar.html
+++ b/app/scripts/templates/toolbar.html
@@ -1,4 +1,4 @@
-<div class="toolbar toolbar--tools">
+<div class="toolbar toolbar--left">
     <div ng-repeat="tool in tools">
         <div class="toolbar__slot"
              ng-if="!tool.divider">
