--- a/app/scripts/templates/menu.html
+++ b/app/scripts/templates/menu.html
@@ -1,20 +1,19 @@
 <script type="text/ng-template" id="menuDropdown">
-    <div class="popup"
-         ng-show="item.isHighlighted && !item.children.length">
-        <div class="p-body">
-            <div class="p-body__item">
-                <tweet tweet="notification.tweet"></tweet>
-            </div>
-        </div>
-    </div>
+    <!--<div class="popup"-->
+         <!--ng-show="item.isHighlighted && !item.children.length">-->
+        <!--<div class="p-body">-->
+            <!--<div class="p-body__item">-->
+                <!--<tweet tweet="notification.tweet"></tweet>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
-    <menu-popup context="item"></menu-popup>
+    <!--<menu-popup context="item"></menu-popup>-->
 
     <div class="amd-item"
          ng-class="{'amd-item--active': item.isOpen,
-                    'amd-item--parent': item.children.length,
-                    'amd-item--highlighted': item.isHighlighted}"
-         ng-mouseover="open(item.id)">
+                    'amd-item--parent': item.children.length}"
+         ng-mouseover="open(item)">
 
         <button class="amd-item__name">{{item.label}}</button>
     </div>
@@ -39,12 +38,11 @@
         <li class="l-list-inline__item"
             ng-repeat="rootItem in menu">
             <div class="app-menu__slot">
-                <menu-popup context="rootItem"></menu-popup>
+                <!--<menu-popup context="rootItem"></menu-popup>-->
 
                 <div class="am-item"
-                     ng-class="{'am-item--active': rootItem.isOpen,
-                                'am-item--highlighted': rootItem.isHighlighted}"
-                     ng-mouseover="open(rootItem.id)">
+                     ng-class="{'am-item--active': rootItem.isOpen}"
+                     ng-mouseover="open(rootItem)">
                     <button class="am-item__name">
                         <span class="l-list-inline l-list-inline--collapsed">
                             <span class="l-list-inline__item is-middle-aligned">
