--- a/app/sass/modules/_toolbar-item.scss
+++ b/app/sass/modules/_toolbar-item.scss
@@ -4,7 +4,7 @@
   &__dropdown {
     position: absolute;
     z-index: 1;
-    top: 0; left: 98%;
+    top: -1px; left: 98%;
     padding: 3px;
     min-width: 100px;
 
@@ -15,9 +15,17 @@
     background: #DCDCDC;
     border: 1px solid $color-bg-tertiary;
   }
+
+  &:hover{
+    outline: 1px solid $color-border;
+  }
 }
+  .toolbar-item--open {
+    outline: 1px solid $color-border;
+  }
 
 .ti-tool {
+  position: relative;
   display: block;
   width: 100%;
 
@@ -27,20 +35,40 @@
     outline: none;
   }
 
+  &__counter {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 15px;
+    height: 15px;
+
+    font-size: 10px;
+    line-height: 15px;
+    font-weight: 600;
+
+    color: white;
+    text-align: center;
+
+    background-color: $color-dc-tertiary;
+    border-radius: 50%;
+  }
+
   &__icon {
     display: block;
     width: 33px;
-    height: 26px;
+    height: 27px;
 
     background-position: center center;
     background-repeat: no-repeat;
   }
     &__icon--large {
-      height: 51px;
+      height: 53px;
     }
 }
 
 .ti-subtool {
+  position: relative;
   display: block;
   width: 100%;
 
@@ -53,10 +81,14 @@
     outline: none;
   }
 
+  &__counter {
+    @extend .ti-tool__counter;
+  }
+
   &__icon {
     display: block;
     width: 20px;
-    height: 20px;
+    height: 22px;
 
     background-position: center center;
     background-repeat: no-repeat;
@@ -65,6 +97,10 @@
   &__label {
     font-size: 11px;
     line-height: 20px;
+  }
+
+  &:hover{
+    outline: 1px solid $color-border;
   }
 }
   .ti-subtool--first {
